# aoc2024

./: pyproject.toml
data/: 02.txt
solution/01/: solution.py
solution/02/: solution.py
