[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Yann Schwartz <abolibibelot@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
